--- a/app/src/main/res/layout/rv_item_child_home_foot.xml
+++ b/app/src/main/res/layout/rv_item_child_home_foot.xml
@@ -13,8 +13,9 @@
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:src="@mipmap/ic_timg"/>
