--- a/app/src/main/res/layout/rv_item_search_detail_list.xml
+++ b/app/src/main/res/layout/rv_item_search_detail_list.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@color/white"
               android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iv_goods_icon"
+        android:padding="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_timg"/>
@@ -13,8 +15,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp">
 
         <TextView
             android:id="@+id/tv_goods_title"
@@ -44,5 +47,10 @@
             android:text="20054条评价　95%好评"
             android:textColor="@color/gary"
             android:textSize="12sp"/>
+        <View
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/line_color"/>
     </LinearLayout>
 </LinearLayout>
