--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,6 +51,7 @@
     <color name="color_border">#ffe5e5e5</color>
     <color name="middle_gray_white">#fff4f4f4</color>
     <color name="white">#FFFFFF</color>
+    <color name="two_percent_white">#F2FFFFFF</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
     <color name="line_color">#cbcbcf</color>
